validation results notebook created

--- a/notebooks/query-containment-execution-time.ipynb
+++ b/notebooks/query-containment-execution-time.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "856afe84-8cd9-4ae0-8184-fa3eb593b989",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "740d4e00-bc5e-40f6-9f84-57afb8988795",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "7f0f0ff7-a942-4e42-a934-26f0112904fc",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "582d92a8-6bf1-41d4-af02-f719fbe88bdd",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "4b4b631b-c897-468d-9c25-8c6c943d58cc",
    "metadata": {},
    "outputs": [
@@ -76,35 +76,35 @@
       "\t\t\t\\hline\n",
       "\t\t\tQuery Template & Average (ms) & std (ms) & max (ms) \\\\\n",
       "\t\t\t\\hline\n",
-      "\t\t\tinteractive-discover-1 & 0.037 & 0.039 & 0.255 \\\\\n",
+      "\t\t\tinteractive-discover-1 & 0.062 & 0.073 & 0.539 \\\\\n",
       "\t\t\t\\hline\n",
-      "\t\t\tinteractive-discover-2 & 0.046 & 0.155 & 1.568 \\\\\n",
+      "\t\t\tinteractive-discover-2 & 0.106 & 0.461 & 4.655 \\\\\n",
       "\t\t\t\\hline\n",
-      "\t\t\tinteractive-discover-3 & 0.059 & 0.214 & 2.153 \\\\\n",
+      "\t\t\tinteractive-discover-3 & 0.040 & 0.034 & 0.133 \\\\\n",
       "\t\t\t\\hline\n",
-      "\t\t\tinteractive-discover-4 & 0.038 & 0.029 & 0.131 \\\\\n",
+      "\t\t\tinteractive-discover-4 & 0.043 & 0.068 & 0.672 \\\\\n",
       "\t\t\t\\hline\n",
-      "\t\t\tinteractive-discover-5 & 0.014 & 0.016 & 0.029 \\\\\n",
+      "\t\t\tinteractive-discover-5 & 0.015 & 0.015 & 0.025 \\\\\n",
       "\t\t\t\\hline\n",
-      "\t\t\tinteractive-discover-6 & 0.034 & 0.057 & 0.536 \\\\\n",
+      "\t\t\tinteractive-discover-6 & 0.068 & 0.039 & 0.174 \\\\\n",
       "\t\t\t\\hline\n",
-      "\t\t\tinteractive-discover-7 & 0.033 & 0.024 & 0.099 \\\\\n",
+      "\t\t\tinteractive-discover-7 & 0.041 & 0.101 & 1.005 \\\\\n",
       "\t\t\t\\hline\n",
-      "\t\t\tinteractive-discover-8 & 0.046 & 0.071 & 0.500 \\\\\n",
+      "\t\t\tinteractive-discover-8 & 0.033 & 0.045 & 0.426 \\\\\n",
       "\t\t\t\\hline\n",
-      "\t\t\tinteractive-short-1 & 0.071 & 0.051 & 0.438 \\\\\n",
+      "\t\t\tinteractive-short-1 & 0.074 & 0.064 & 0.560 \\\\\n",
       "\t\t\t\\hline\n",
-      "\t\t\tinteractive-short-2 & 0.166 & 0.220 & 2.186 \\\\\n",
+      "\t\t\tinteractive-short-2 & 0.309 & 0.327 & 2.791 \\\\\n",
       "\t\t\t\\hline\n",
-      "\t\t\tinteractive-short-3 & 0.086 & 0.098 & 0.815 \\\\\n",
+      "\t\t\tinteractive-short-3 & 0.072 & 0.069 & 0.650 \\\\\n",
       "\t\t\t\\hline\n",
-      "\t\t\tinteractive-short-4 & 0.035 & 0.082 & 0.819 \\\\\n",
+      "\t\t\tinteractive-short-4 & 0.042 & 0.032 & 0.144 \\\\\n",
       "\t\t\t\\hline\n",
-      "\t\t\tinteractive-short-5 & 0.049 & 0.037 & 0.189 \\\\\n",
+      "\t\t\tinteractive-short-5 & 0.043 & 0.057 & 0.551 \\\\\n",
       "\t\t\t\\hline\n",
-      "\t\t\tinteractive-short-6 & 0.088 & 0.070 & 0.563 \\\\\n",
+      "\t\t\tinteractive-short-6 & 0.132 & 0.343 & 3.473 \\\\\n",
       "\t\t\t\\hline\n",
-      "\t\t\tinteractive-short-7 & 0.157 & 0.121 & 0.808 \\\\\n",
+      "\t\t\tinteractive-short-7 & 0.176 & 0.158 & 0.971 \\\\\n",
       "\t\t\t\\hline\n",
       "\t\t\\end{tabular}\n",
       "\t\\end{center}\n",
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "f932dd3e-473e-49d6-9410-6df0be9549c7",
    "metadata": {},
    "outputs": [
@@ -134,21 +134,21 @@
      "text": [
       "| Query Template         |   Average (ms) |   std (ms) |   max (ms) |\n",
       "|------------------------|----------------|------------|------------|\n",
-      "| interactive-discover-1 |      0.0365476 |  0.0388706 |   0.255113 |\n",
-      "| interactive-discover-2 |      0.0455865 |  0.155283  |   1.56809  |\n",
-      "| interactive-discover-3 |      0.0594948 |  0.213817  |   2.15251  |\n",
-      "| interactive-discover-4 |      0.0375369 |  0.028878  |   0.130759 |\n",
-      "| interactive-discover-5 |      0.0144744 |  0.016457  |   0.02854  |\n",
-      "| interactive-discover-6 |      0.0344277 |  0.0568378 |   0.535854 |\n",
-      "| interactive-discover-7 |      0.0326442 |  0.0243192 |   0.098555 |\n",
-      "| interactive-discover-8 |      0.045571  |  0.0709648 |   0.500008 |\n",
-      "| interactive-short-1    |      0.0713216 |  0.0511485 |   0.437518 |\n",
-      "| interactive-short-2    |      0.165514  |  0.220324  |   2.18607  |\n",
-      "| interactive-short-3    |      0.0858383 |  0.0979579 |   0.814646 |\n",
-      "| interactive-short-4    |      0.035204  |  0.0822218 |   0.818604 |\n",
-      "| interactive-short-5    |      0.0488544 |  0.0371241 |   0.188891 |\n",
-      "| interactive-short-6    |      0.0877324 |  0.0697562 |   0.56274  |\n",
-      "| interactive-short-7    |      0.157336  |  0.120648  |   0.80848  |\n"
+      "| interactive-discover-1 |      0.0618438 |  0.0726364 |   0.539265 |\n",
+      "| interactive-discover-2 |      0.105928  |  0.461229  |   4.65459  |\n",
+      "| interactive-discover-3 |      0.0398161 |  0.0335151 |   0.132836 |\n",
+      "| interactive-discover-4 |      0.0429159 |  0.0680897 |   0.671575 |\n",
+      "| interactive-discover-5 |      0.0151847 |  0.0151789 |   0.025168 |\n",
+      "| interactive-discover-6 |      0.0682071 |  0.039463  |   0.17427  |\n",
+      "| interactive-discover-7 |      0.0413428 |  0.101086  |   1.00512  |\n",
+      "| interactive-discover-8 |      0.0332523 |  0.0448469 |   0.426482 |\n",
+      "| interactive-short-1    |      0.0741067 |  0.0635529 |   0.559887 |\n",
+      "| interactive-short-2    |      0.308642  |  0.326832  |   2.7905   |\n",
+      "| interactive-short-3    |      0.0715054 |  0.06854   |   0.649695 |\n",
+      "| interactive-short-4    |      0.0416769 |  0.0316831 |   0.143782 |\n",
+      "| interactive-short-5    |      0.0434088 |  0.0572675 |   0.550559 |\n",
+      "| interactive-short-6    |      0.131873  |  0.342731  |   3.47311  |\n",
+      "| interactive-short-7    |      0.175954  |  0.157919  |   0.970906 |\n"
      ]
     }
    ],
