--- a/notebooks/ratio_useful_sources.ipynb
+++ b/notebooks/ratio_useful_sources.ipynb
@@ -129,19 +129,19 @@
      "text": [
       "| Query template         |        v0 |        v1 |        v2 |        v3 |        v4 |\n",
       "|------------------------|-----------|-----------|-----------|-----------|-----------|\n",
-      "| interactive-discover-1 | 0.0689655 | 0.0666667 | 0.0555556 | 0.424242  | 0.0666667 |\n",
-      "| interactive-discover-2 | 0.354331  | 0.133333  | 0.105263  | 0.908257  | 0.418033  |\n",
-      "| interactive-discover-3 | 0.367589  | 0.704082  | 0.553398  | 0.622642  | 0.604396  |\n",
-      "| interactive-discover-4 | 0.129032  | 0.0930233 | 0.190476  | 0.0292683 | 0.183099  |\n",
-      "| interactive-discover-5 | 0.0708661 | 0.133333  | 0.105263  | 0.0183486 | 0.131148  |\n",
-      "| interactive-discover-6 |           | 0.0512821 | 0.0740741 |           | 0.406015  |\n",
-      "| interactive-discover-7 |           | 0.0769231 | 0.111111  |           | 0.0225564 |\n",
+      "| interactive-discover-1 | 0.0689655 | 0.0555556 | 0.0555556 | 0.424242  | 0.0666667 |\n",
+      "| interactive-discover-2 | 0.354331  | 0.105263  | 0.105263  | 0.908257  | 0.418033  |\n",
+      "| interactive-discover-3 | 0.367589  | 0.469388  | 0.553398  | 0.622642  | 0.604396  |\n",
+      "| interactive-discover-4 | 0.129032  | 0.190476  | 0.190476  | 0.0292683 | 0.183099  |\n",
+      "| interactive-discover-5 | 0.0708661 | 0.105263  | 0.105263  | 0.0183486 | 0.131148  |\n",
+      "| interactive-discover-6 |           | 0.0666667 | 0.0740741 |           | 0.406015  |\n",
+      "| interactive-discover-7 |           | 0.1       | 0.111111  |           | 0.0225564 |\n",
       "| interactive-discover-8 |           |           |           |           |           |\n",
-      "| interactive-short-1    | 0.117647  | 0.142857  | 0.117647  | 0.117647  | 0.117647  |\n",
+      "| interactive-short-1    | 0.117647  | 0.117647  | 0.117647  | 0.117647  | 0.117647  |\n",
       "| interactive-short-2    |           |           |           |           |           |\n",
       "| interactive-short-3    |           |           |           |           |           |\n",
       "| interactive-short-4    | 0.0625    | 0.0625    | 0.0588235 | 0.0588235 | 0.0625    |\n",
-      "| interactive-short-5    | 0.111111  | 0.125     | 0.125     | 0.105263  | 0.04      |\n",
+      "| interactive-short-5    | 0.111111  | 0.111111  | 0.111111  | 0.105263  | 0.04      |\n",
       "| interactive-short-6    |           |           |           |           |           |\n",
       "| interactive-short-7    |           |           |           |           |           |\n"
      ]
