--- a/artefact/ratio_useful_resources/table_ratio_useful_ressources.tex
+++ b/artefact/ratio_useful_resources/table_ratio_useful_ressources.tex
@@ -10,7 +10,7 @@
 			\hline
 			interactive-discover-3 & 37/36 & 47/45 & 55/53 & 62/61 & 60/59 \\
 			\hline
-			interactive-discover-4 & 13/5 & 19/14 & 19/15 & 3/3 & 18/9 \\
+			interactive-discover-4 & 13/5 & 19/13 & 19/15 & 3/3 & 18/9 \\
 			\hline
 			interactive-discover-5 & 7/7 & 11/8 & 11/9 & 2/2 & 13/12 \\
 			\hline
@@ -20,7 +20,7 @@
 			\hline
 			interactive-discover-8 & -/- & -/- & -/- & -/- & -/- \\
 			\hline
-			interactive-short-1 & 12/1 & 12/8 & 12/8 & 12/1 & 12/2 \\
+			interactive-short-1 & 12/1 & 12/7 & 12/8 & 12/1 & 12/2 \\
 			\hline
 			interactive-short-2 & -/- & -/- & -/- & -/- & -/- \\
 			\hline
@@ -36,6 +36,6 @@
 			\hline
 		\end{tabular}
 	\end{center}
-	\caption{Even using the shape index (denominator) compare to the type-index with LDP (numerator) for the majority of the query their is a low ratio of useful resources aquired.}
+	\caption{Even with the shape index approach (denominator), most queries have a percentage of useful resources acquired. In some cases, the type index with LDP (numerator) can produce a percentage of 100\%, whereas the shape index approach never produces a percentage as close to 100\%.}
 	\label{tab:ratioUsefulResources}
 \end{table}
