consistencies of results evaluated with new datas.

--- a/notebooks/validation_results.ipynb
+++ b/notebooks/validation_results.ipynb
@@ -122,16 +122,63 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "af83c3fa-b8de-4d7c-9968-890150e2cd9e",
+   "id": "7b482e74-3248-4ea1-9228-f69fc8f235b0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "evalInstances = [shapeIndexDataset, shapeIndex0Dataset, shapeIndex20Dataset, shapeIndex50Dataset, shapeIndex80Dataset, shapeIndexInnerDataset, shapeIndexMinimalDataset]"
+    "shapeEntry20PathResult = \"../results/shape-entry-20-percent/shape_index_result.json\"\n",
+    "shapeEntry20PathSummary = \"../results/shape-entry-20-percent/summary_shape_index_result.json\"\n",
+    "shapeEntry20Dataset = generateDatasetFromResults(shapeEntry20PathResult, shapeEntry20PathSummary, \"shapeEntry20Percent\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "cc10efbe-928f-4229-94f6-73cb6bc5929b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shapeEntry50PathResult = \"../results/shape-entry-50-percent/shape_index_result.json\"\n",
+    "shapeEntry50PathSummary = \"../results/shape-entry-50-percent/summary_shape_index_result.json\"\n",
+    "shapeEntry50Dataset = generateDatasetFromResults(shapeEntry50PathResult, shapeEntry50PathSummary, \"shapeEntry50Percent\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "cb4fa9d4-2d6a-4fa6-bdc2-c5fcefa78245",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shapeEntry80PathResult = \"../results/shape-entry-80-percent/shape_index_result.json\"\n",
+    "shapeEntry80PathSummary = \"../results/shape-entry-80-percent/summary_shape_index_result.json\"\n",
+    "shapeEntry80Dataset = generateDatasetFromResults(shapeEntry80PathResult, shapeEntry80PathSummary, \"shapeEntry80Percent\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "af83c3fa-b8de-4d7c-9968-890150e2cd9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evalInstances = [\n",
+    "    shapeIndexDataset,\n",
+    "    shapeIndex0Dataset,\n",
+    "    shapeIndex20Dataset,\n",
+    "    shapeIndex50Dataset,\n",
+    "    shapeIndex80Dataset,\n",
+    "    shapeIndexInnerDataset,\n",
+    "    shapeIndexMinimalDataset,\n",
+    "    shapeEntry20Dataset,\n",
+    "    shapeEntry50Dataset,\n",
+    "    shapeEntry80Dataset\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "6b1a58c5-4f04-40b0-8c8e-b1b077277eb4",
    "metadata": {},
    "outputs": [],
@@ -162,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "0964e0b7-99c0-4bf1-8779-8e029fbb861c",
    "metadata": {
     "scrolled": true
@@ -476,10 +523,163 @@
        "   'v3': {'same_n_results': True},\n",
        "   'v4': {'same_n_results': True}},\n",
        "  'interactive-short-6': {},\n",
-       "  'interactive-short-7': {'v0': {'same_n_results': True}}}}"
+       "  'interactive-short-7': {'v0': {'same_n_results': True}}},\n",
+       " 'shapeEntry20Percent': {'interactive-discover-1': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True},\n",
+       "   'v3': {'same_n_results': True},\n",
+       "   'v4': {'same_n_results': True}},\n",
+       "  'interactive-discover-2': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True},\n",
+       "   'v3': {'same_n_results': True},\n",
+       "   'v4': {'same_n_results': True}},\n",
+       "  'interactive-discover-3': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True},\n",
+       "   'v3': {'same_n_results': True},\n",
+       "   'v4': {'same_n_results': True}},\n",
+       "  'interactive-discover-4': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True},\n",
+       "   'v3': {'same_n_results': True},\n",
+       "   'v4': {'same_n_results': True}},\n",
+       "  'interactive-discover-5': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True},\n",
+       "   'v3': {'same_n_results': True},\n",
+       "   'v4': {'same_n_results': True}},\n",
+       "  'interactive-discover-6': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True}},\n",
+       "  'interactive-discover-7': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True}},\n",
+       "  'interactive-discover-8': {},\n",
+       "  'interactive-short-1': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True},\n",
+       "   'v3': {'same_n_results': True},\n",
+       "   'v4': {'same_n_results': True}},\n",
+       "  'interactive-short-2': {},\n",
+       "  'interactive-short-3': {},\n",
+       "  'interactive-short-4': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True},\n",
+       "   'v3': {'same_n_results': True},\n",
+       "   'v4': {'same_n_results': True}},\n",
+       "  'interactive-short-5': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True},\n",
+       "   'v3': {'same_n_results': True},\n",
+       "   'v4': {'same_n_results': True}},\n",
+       "  'interactive-short-6': {},\n",
+       "  'interactive-short-7': {}},\n",
+       " 'shapeEntry50Percent': {'interactive-discover-1': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True},\n",
+       "   'v3': {'same_n_results': True},\n",
+       "   'v4': {'same_n_results': True}},\n",
+       "  'interactive-discover-2': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True},\n",
+       "   'v3': {'same_n_results': True},\n",
+       "   'v4': {'same_n_results': True}},\n",
+       "  'interactive-discover-3': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True},\n",
+       "   'v3': {'same_n_results': True},\n",
+       "   'v4': {'same_n_results': True}},\n",
+       "  'interactive-discover-4': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True},\n",
+       "   'v3': {'same_n_results': True},\n",
+       "   'v4': {'same_n_results': True}},\n",
+       "  'interactive-discover-5': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True},\n",
+       "   'v3': {'same_n_results': True},\n",
+       "   'v4': {'same_n_results': True}},\n",
+       "  'interactive-discover-6': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True}},\n",
+       "  'interactive-discover-7': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True}},\n",
+       "  'interactive-discover-8': {},\n",
+       "  'interactive-short-1': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True},\n",
+       "   'v3': {'same_n_results': True},\n",
+       "   'v4': {'same_n_results': True}},\n",
+       "  'interactive-short-2': {},\n",
+       "  'interactive-short-3': {},\n",
+       "  'interactive-short-4': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True},\n",
+       "   'v3': {'same_n_results': True},\n",
+       "   'v4': {'same_n_results': True}},\n",
+       "  'interactive-short-5': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True},\n",
+       "   'v3': {'same_n_results': True},\n",
+       "   'v4': {'same_n_results': True}},\n",
+       "  'interactive-short-6': {},\n",
+       "  'interactive-short-7': {}},\n",
+       " 'shapeEntry80Percent': {'interactive-discover-1': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True},\n",
+       "   'v3': {'same_n_results': True},\n",
+       "   'v4': {'same_n_results': True}},\n",
+       "  'interactive-discover-2': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True},\n",
+       "   'v3': {'same_n_results': True},\n",
+       "   'v4': {'same_n_results': True}},\n",
+       "  'interactive-discover-3': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True},\n",
+       "   'v3': {'same_n_results': True},\n",
+       "   'v4': {'same_n_results': True}},\n",
+       "  'interactive-discover-4': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True},\n",
+       "   'v3': {'same_n_results': True},\n",
+       "   'v4': {'same_n_results': True}},\n",
+       "  'interactive-discover-5': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True},\n",
+       "   'v3': {'same_n_results': True},\n",
+       "   'v4': {'same_n_results': True}},\n",
+       "  'interactive-discover-6': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True}},\n",
+       "  'interactive-discover-7': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True}},\n",
+       "  'interactive-discover-8': {},\n",
+       "  'interactive-short-1': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True},\n",
+       "   'v3': {'same_n_results': True},\n",
+       "   'v4': {'same_n_results': True}},\n",
+       "  'interactive-short-2': {},\n",
+       "  'interactive-short-3': {},\n",
+       "  'interactive-short-4': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True},\n",
+       "   'v3': {'same_n_results': True},\n",
+       "   'v4': {'same_n_results': True}},\n",
+       "  'interactive-short-5': {'v0': {'same_n_results': True},\n",
+       "   'v1': {'same_n_results': True},\n",
+       "   'v2': {'same_n_results': True},\n",
+       "   'v3': {'same_n_results': True},\n",
+       "   'v4': {'same_n_results': True}},\n",
+       "  'interactive-short-6': {},\n",
+       "  'interactive-short-7': {}}}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "38ee91e2-b65e-4f79-aba3-de66b4aca98c",
    "metadata": {
     "scrolled": true
@@ -520,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "d089374f-c4ea-46e5-a063-610d685e1b53",
    "metadata": {
     "scrolled": true
@@ -835,6 +1035,159 @@
        "   'v4': {'consistent': True}},\n",
        "  'interactive-short-6': {},\n",
        "  'interactive-short-7': {'v3': {'consistent': True}}},\n",
+       " 'shapeEntry20Percent': {'interactive-discover-1': {'v0': {'consistent': True},\n",
+       "   'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v3': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-discover-2': {'v0': {'consistent': True},\n",
+       "   'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v3': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-discover-3': {'v0': {'consistent': True},\n",
+       "   'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v3': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-discover-4': {'v0': {'consistent': True},\n",
+       "   'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v3': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-discover-5': {'v0': {'consistent': True},\n",
+       "   'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v3': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-discover-6': {'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-discover-7': {'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-discover-8': {},\n",
+       "  'interactive-short-1': {'v0': {'consistent': True},\n",
+       "   'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v3': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-short-2': {},\n",
+       "  'interactive-short-3': {},\n",
+       "  'interactive-short-4': {'v0': {'consistent': True},\n",
+       "   'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v3': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-short-5': {'v0': {'consistent': True},\n",
+       "   'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v3': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-short-6': {},\n",
+       "  'interactive-short-7': {}},\n",
+       " 'shapeEntry50Percent': {'interactive-discover-1': {'v0': {'consistent': True},\n",
+       "   'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v3': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-discover-2': {'v0': {'consistent': True},\n",
+       "   'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v3': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-discover-3': {'v0': {'consistent': True},\n",
+       "   'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v3': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-discover-4': {'v0': {'consistent': True},\n",
+       "   'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v3': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-discover-5': {'v0': {'consistent': True},\n",
+       "   'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v3': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-discover-6': {'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-discover-7': {'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-discover-8': {},\n",
+       "  'interactive-short-1': {'v0': {'consistent': True},\n",
+       "   'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v3': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-short-2': {},\n",
+       "  'interactive-short-3': {},\n",
+       "  'interactive-short-4': {'v0': {'consistent': True},\n",
+       "   'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v3': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-short-5': {'v0': {'consistent': True},\n",
+       "   'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v3': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-short-6': {},\n",
+       "  'interactive-short-7': {}},\n",
+       " 'shapeEntry80Percent': {'interactive-discover-1': {'v0': {'consistent': True},\n",
+       "   'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v3': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-discover-2': {'v0': {'consistent': True},\n",
+       "   'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v3': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-discover-3': {'v0': {'consistent': True},\n",
+       "   'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v3': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-discover-4': {'v0': {'consistent': True},\n",
+       "   'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v3': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-discover-5': {'v0': {'consistent': True},\n",
+       "   'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v3': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-discover-6': {'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-discover-7': {'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-discover-8': {},\n",
+       "  'interactive-short-1': {'v0': {'consistent': True},\n",
+       "   'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v3': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-short-2': {},\n",
+       "  'interactive-short-3': {},\n",
+       "  'interactive-short-4': {'v0': {'consistent': True},\n",
+       "   'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v3': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-short-5': {'v0': {'consistent': True},\n",
+       "   'v1': {'consistent': True},\n",
+       "   'v2': {'consistent': True},\n",
+       "   'v3': {'consistent': True},\n",
+       "   'v4': {'consistent': True}},\n",
+       "  'interactive-short-6': {},\n",
+       "  'interactive-short-7': {}},\n",
        " 'typeIndexLdp': {'interactive-discover-1': {'v0': {'consistent': True},\n",
        "   'v1': {'consistent': True},\n",
        "   'v2': {'consistent': True},\n",
@@ -888,7 +1241,7 @@
        "  'interactive-short-7': {}}}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
